// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`set meta > set meta to class 1`] = `
[
  0,
]
`;

exports[`set meta > set meta to class 2`] = `
[
  {
    "data": {
      "a": 1,
      "arr": [
        0,
        1,
      ],
      "b": 0,
    },
  },
  {
    "data": {
      "arr": [
        0,
        2,
      ],
      "b": 1,
    },
  },
]
`;

exports[`set meta > set meta to class 3`] = `
[
  {
    "data": {
      "a": 1,
      "arr": [
        0,
        1,
      ],
      "b": 0,
    },
  },
  {
    "data": {
      "arr": [
        0,
        2,
      ],
      "b": 1,
    },
  },
]
`;

exports[`set meta > set meta to class 4`] = `
[
  0,
]
`;

exports[`set meta > set meta to class 5`] = `
[
  {
    "data": {
      "a": 1,
      "arr": [
        0,
        1,
      ],
      "b": 0,
    },
  },
  {
    "data": {
      "arr": [
        0,
        2,
      ],
      "b": 1,
    },
  },
  {
    "data": {
      "c": 1,
    },
  },
]
`;

exports[`set meta > set meta to class 6`] = `
[
  {
    "data": {
      "a": 1,
      "arr": [
        0,
        1,
      ],
      "b": 0,
    },
  },
  {
    "data": {
      "arr": [
        0,
        2,
      ],
      "b": 1,
    },
  },
  {
    "data": {
      "c": 1,
    },
  },
]
`;

exports[`set meta > set meta to method 1`] = `
[
  0,
]
`;

exports[`set meta > set meta to method 2`] = `
[
  {
    "data": {
      "a": 1,
      "arr": [
        0,
        1,
      ],
      "b": 0,
    },
  },
  {
    "data": {
      "arr": [
        0,
        2,
      ],
      "b": 1,
    },
  },
]
`;

exports[`set meta > set meta to method 3`] = `
[
  {
    "data": {
      "a": 1,
      "arr": [
        0,
        1,
      ],
      "b": 0,
    },
  },
  {
    "data": {
      "arr": [
        0,
        2,
      ],
      "b": 1,
    },
  },
]
`;

exports[`set meta > set meta to method 4`] = `
[
  0,
]
`;

exports[`set meta > set meta to method 5`] = `
[
  {
    "data": {
      "a": 1,
      "arr": [
        0,
        1,
      ],
      "b": 0,
    },
  },
  {
    "data": {
      "arr": [
        0,
        2,
      ],
      "b": 1,
    },
  },
  {
    "data": {
      "c": 1,
    },
  },
]
`;

exports[`set meta > set meta to method 6`] = `
[
  {
    "data": {
      "a": 1,
      "arr": [
        0,
        1,
      ],
      "b": 0,
    },
  },
  {
    "data": {
      "arr": [
        0,
        2,
      ],
      "b": 1,
    },
  },
  {
    "data": {
      "c": 1,
    },
  },
]
`;

exports[`set meta > set meta to property 1`] = `
[
  0,
]
`;

exports[`set meta > set meta to property 2`] = `
[
  {
    "data": {
      "a": 1,
      "arr": [
        0,
        1,
      ],
      "b": 0,
    },
  },
  {
    "data": {
      "arr": [
        0,
        2,
      ],
      "b": 1,
    },
  },
]
`;

exports[`set meta > set meta to property 3`] = `
[
  {
    "data": {
      "a": 1,
      "arr": [
        0,
        1,
      ],
      "b": 0,
    },
  },
  {
    "data": {
      "arr": [
        0,
        2,
      ],
      "b": 1,
    },
  },
]
`;

exports[`set meta > set meta to property 4`] = `
[
  0,
]
`;

exports[`set meta > set meta to property 5`] = `
[
  {
    "data": {
      "a": 1,
      "arr": [
        0,
        1,
      ],
      "b": 0,
    },
  },
  {
    "data": {
      "arr": [
        0,
        2,
      ],
      "b": 1,
    },
  },
  {
    "data": {
      "c": 1,
    },
  },
]
`;

exports[`set meta > set meta to property 6`] = `
[
  {
    "data": {
      "a": 1,
      "arr": [
        0,
        1,
      ],
      "b": 0,
    },
  },
  {
    "data": {
      "arr": [
        0,
        2,
      ],
      "b": 1,
    },
  },
  {
    "data": {
      "c": 1,
    },
  },
]
`;
